<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureWithLargestChild="true"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:id="@+id/cart_emailRow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cart_emailAddressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/cart_editText_emailAddress"
                    android:text="@string/email"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <EditText
                    android:id="@+id/cart_editText_emailAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_weight="1"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"
                    android:textAlignment="textEnd"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:ignore="NestedWeights" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cart_totalCostRow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cart_totalCostLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/cart_totalCost"
                    android:text="@string/total_cost"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cart_totalCost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:ignore="NestedWeights"
                    tools:text="$100.00" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cart_v1Row"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                android:layout_weight="1">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cart_v1Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:labelFor="@id/cart_v1CheckBox"
                    android:text="Use V1"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:ignore="NestedWeights" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cart_v1CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cart_expressRow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cart_expressLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:labelFor="@id/cart_expressCheckBox"
                    android:text="@string/cart_expressLabel"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:ignore="NestedWeights" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cart_expressCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cart_buyNowRow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cart_buyNowLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:labelFor="@id/cart_buyNowCheckBox"
                    android:text="@string/cart_buyNowLabel"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:ignore="NestedWeights" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cart_buyNowCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cart_pickupRow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cart_pickupLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:labelFor="@id/cart_pickupCheckBox"
                    android:text="@string/cart_pickupLabel"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:ignore="NestedWeights" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cart_pickupCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cart_shippingOptionsRequiredRow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cart_shippingOptionsRequiredLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:labelFor="@id/cart_shippingOptionsRequiredCheckBox"
                    android:text="@string/cart_shippingOptionsRequiredLabel"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:ignore="NestedWeights" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cart_shippingOptionsRequiredCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <app.cash.paykit.core.ui.CashAppPayButton
        style="@style/CAPButtonStyle.Light"
        android:id="@+id/cart_button_cash"
        android:layout_height="54dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent" />

    <com.afterpay.android.view.AfterpayPaymentButton
        android:id="@+id/cart_button_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp" />

</LinearLayout>
