...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shopping_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/shopping_detailsCard"
        app:layout_constraintTop_toTopOf="parent" />

...
        <com.afterpay.android.view.AfterpayPriceBreakdown
            android:id="@+id/shopping_afterpayPriceBreakdown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            app:layout_constraintBottom_toTopOf="@id/shopping_button_viewCart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shopping_totalCostLabel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shopping_button_viewCart"
...
